@startuml
left to right direction
hide circle
skinparam classAttributeIconSize 0
skinparam class {
    BackgroundColor LIGHTYELLOW
    BorderColor Black
    ArrowColor Black
}

class BusyBreak {
  + trips: ArrayList<Trip>
  + getStorage(): Storage
}

class TripCommand {
  + handleTripCommand(String[]): void
  - addTrip(String[]): void
  - extractField(String, String): String
}

class Trip {
  - startDateTime: Time
  - endDateTime: Time
  - transport: String
  + Trip(String, String, String, String, String)
  + getStartDate(): String
  + getStartTime(): String
  + getEndDate(): String
  + getEndTime(): String
  + getTransport(): String
}

class Time {
  + Time(String, String)
  + getDateString(): String
  + getTimeString(): String
  + getDateTime(): LocalDateTime
}

class Storage {
  + saveTrips(): void
}

class Parser {
  + parseUserInput(): GetCommand
}

BusyBreak "1" *--> "*" Trip : contains
BusyBreak "1" --> "1" Storage : has
TripCommand "1" ..> "1" BusyBreak : uses
TripCommand "1" ..> "*" Trip : creates
Trip "1" *--> "2" Time : has
Parser "1" ..> "1" TripCommand : provides input
Storage "1" ..> "*" Trip : saves

@enduml
